force-app/main/default/objects/Property_Extension__c/Property_Extension__c.object-meta.xml
<CustomObject>
    <label>Property Extension</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Property Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>