force-app/main/default/objects/Property_Extension__c/fields/Anticipated_List_price__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_List_price__c</fullName>
    <label>Anticipated List price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>