force-app/main/default/objects/Property_Extension__c/fields/Anticipated_List_Price_File__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_List_Price_File__c</fullName>
    <formula>IF(ISBLANK(Anticipated_List_Price_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Anticipated_List_Price_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated List Price File</label>
    <type>Text</type>
</CustomField>