force-app/main/default/objects/Property_Extension__c/fields/Anticipated_List_Price_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_List_Price_File_Id__c</fullName>
    <label>Anticipated List Price File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>