force-app/main/default/objects/Property_Extension__c/fields/Anticipated_marketing_time__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_marketing_time__c</fullName>
    <label>Anticipated marketing time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>