force-app/main/default/objects/Property_Extension__c/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Assigned Asset Manager working this Property Extension</inlineHelpText>
    <label>Asset Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Property_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>