force-app/main/default/objects/Property_Extension__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check</label>
    <type>Checkbox</type>
</CustomField>