force-app/main/default/objects/Property_Extension__c/fields/Borrower_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Portal_Id__c</fullName>
    <label>Borrower Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>