force-app/main/default/objects/Property_Extension__c/fields/Cost_for_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_Improvements__c</fullName>
    <label>Cost for Improvements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>