force-app/main/default/objects/Property_Extension__c/fields/Current_Condition_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Current_Condition_of_Property__c</fullName>
    <label>Current Condition of Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Complete</fullName>
            </value>
            <value>
                <fullName>Mid Construction</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>