force-app/main/default/objects/Property_Extension__c/fields/Current_Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Line_Maturity_Date__c</fullName>
    <formula>Property__r.Deal__r.Current_Line_Maturity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This date is populated at the Deal level and can provide an updated expiration date of the Line of Credit. This date can be updated.</inlineHelpText>
    <label>Current Loan Maturity Date Delete</label>
    <type>Date</type>
</CustomField>