force-app/main/default/objects/Property_Extension__c/fields/Days_To_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Resolve__c</fullName>
    <description>If first extension then calculated as Completed Extension Date - 60 days prior to Original Asset Maturity Date. If the Property Extension Created Date &lt; 60 days prior to Original Asset Maturity Date then use Extension Created Date. Any extension after first calculated as Extension Completed Date - Previous Asset Maturity Date. If Property Extension Created Date &lt; Previous Asset Maturity Date then use Property Extension Created Date.</description>
    <formula>IF(Is_First__c
, IF(DATEVALUE(CreatedDate) &lt; (Original_Asset_Maturity_Date_Formula__c - 60),
Extension_Date__c - DATEVALUE(CreatedDate)
,Extension_Date__c - (Original_Asset_Maturity_Date_Formula__c - 60)
), 
IF(NOT(ISNULL(Previous_Asset_Maturity_Date__c)) &amp;&amp; Previous_Asset_Maturity_Date__c &gt; DATEVALUE(CreatedDate),
Extension_Date__c - DATEVALUE(CreatedDate),
Extension_Date__c - Previous_Asset_Maturity_Date__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If first extension then calculated as Completed Extension Date - 60 days prior to Original Asset Maturity Date. If the Property Extension Created Date &lt; 60 days prior to Original Asset Maturity Date then use Extension Created Date. Any extension after first calculated as Extension Completed Date - Previous Asset Maturity Date. If Property Extension Created Date &lt; Previous Asset Maturity Date then use Property Extension Created Date.</inlineHelpText>
    <label>Days To Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>