force-app/main/default/objects/Property_Extension__c/fields/Docs_Requested_From_Legal_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Requested_From_Legal_Date__c</fullName>
    <label>Docs Requested From Legal Date</label>
    <type>Date</type>
</CustomField>