force-app/main/default/objects/Property_Extension__c/fields/Exit_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy__c</fullName>
    <label>Exit Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List for Sale</fullName>
            </value>
            <value>
                <fullName>Anticipated List price</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>