force-app/main/default/objects/Property_Extension__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <label>Extension Completed Date</label>
    <type>Date</type>
</CustomField>