force-app/main/default/objects/Property_Extension__c/fields/Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee__c</fullName>
    <label>Extension Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>