force-app/main/default/objects/Property_Extension__c/fields/Extension_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee_Percent__c</fullName>
    <label>Extension Fee (%)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>