force-app/main/default/objects/Property_Extension__c/fields/Extension_Form_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Form_Approval_Date__c</fullName>
    <label>Loan Approval Approved Date</label>
    <type>Date</type>
</CustomField>