force-app/main/default/objects/Property_Extension__c/fields/Extension_Form_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Form_Completed_Date__c</fullName>
    <label>Extension Form Completed Date</label>
    <type>Date</type>
</CustomField>