force-app/main/default/objects/Property_Extension__c/fields/Extension_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason_2__c</fullName>
    <label>Extension Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>