force-app/main/default/objects/Property_Extension__c/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <description>Reason for this Extension</description>
    <label>Extension Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Delay</fullName>
            </value>
            <value>
                <fullName>In House Refi</fullName>
            </value>
            <value>
                <fullName>Outside Refi</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>