force-app/main/default/objects/Property_Extension__c/fields/Extension_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Start_Date__c</fullName>
    <label>Extension Start Date</label>
    <type>Date</type>
</CustomField>