force-app/main/default/objects/Property_Extension__c/fields/Extension_Term_Preference__c.field-meta.xml
<CustomField>
    <fullName>Extension_Term_Preference__c</fullName>
    <label>Extension Term Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>