force-app/main/default/objects/Property_Extension__c/fields/Hazard_Insurance_Policy_File__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Insurance_Policy_File__c</fullName>
    <formula>IF(ISBLANK(Hazard_Insurance_Policy_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Hazard_Insurance_Policy_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hazard Insurance Policy File</label>
    <type>Text</type>
</CustomField>