force-app/main/default/objects/Property_Extension__c/fields/Hazard_Insurance_Policy_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Insurance_Policy_File_Id__c</fullName>
    <label>Hazard Insurance Policy File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>