force-app/main/default/objects/Property_Extension__c/fields/How_long_will_improvements_take__c.field-meta.xml
<CustomField>
    <fullName>How_long_will_improvements_take__c</fullName>
    <label>How long will improvements take</label>
    <length>255</length>
    <type>Text</type>
</CustomField>