force-app/main/default/objects/Property_Extension__c/fields/Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate__c</fullName>
    <formula>Property__r.Deal__r.Index_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>