force-app/main/default/objects/Property_Extension__c/fields/Interior_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Interior_Contact_Email__c</fullName>
    <label>Interior Contact Email</label>
    <type>Email</type>
</CustomField>