force-app/main/default/objects/Property_Extension__c/fields/Interior_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Interior_Contact_Name__c</fullName>
    <label>Interior Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>