force-app/main/default/objects/Property_Extension__c/fields/Interior_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Interior_Contact_Phone__c</fullName>
    <label>Interior Contact Phone</label>
    <type>Phone</type>
</CustomField>