force-app/main/default/objects/Property_Extension__c/fields/Is_First__c.field-meta.xml
<CustomField>
    <fullName>Is_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First</label>
    <type>Checkbox</type>
</CustomField>