force-app/main/default/objects/Property_Extension__c/fields/KYC_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Ordered_Date__c</fullName>
    <label>KYC Ordered Date</label>
    <type>Date</type>
</CustomField>