force-app/main/default/objects/Property_Extension__c/fields/KYC_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Received_Date__c</fullName>
    <label>KYC Received Date</label>
    <type>Date</type>
</CustomField>