force-app/main/default/objects/Property_Extension__c/fields/Mid_Construction_Completion__c.field-meta.xml
<CustomField>
    <fullName>Mid_Construction_Completion__c</fullName>
    <label>Mid-Construction Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>