force-app/main/default/objects/Property_Extension__c/fields/Modified_Floor__c.field-meta.xml
<CustomField>
    <fullName>Modified_Floor__c</fullName>
    <label>Modified Floor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>