force-app/main/default/objects/Property_Extension__c/fields/Modified_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Modified_Interest_Rate__c</fullName>
    <label>Modified Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>