force-app/main/default/objects/Property_Extension__c/fields/Modified_Margin__c.field-meta.xml
<CustomField>
    <fullName>Modified_Margin__c</fullName>
    <label>Modified Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>