force-app/main/default/objects/Property_Extension__c/fields/New_Asset_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Interest_Rate__c</fullName>
    <label>New Asset Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>