force-app/main/default/objects/Property_Extension__c/fields/New_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Maturity_Date__c</fullName>
    <inlineHelpText>This date is populated at on the Extension Task only and will replace the Current Asset Maturity that is located on the asset level</inlineHelpText>
    <label>New Asset Maturity Date</label>
    <type>Date</type>
</CustomField>