force-app/main/default/objects/Property_Extension__c/fields/New_Rate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Effective_Date__c</fullName>
    <label>New Rate Effective Date</label>
    <type>Date</type>
</CustomField>