force-app/main/default/objects/Property_Extension__c/fields/Operating_Statement_File__c.field-meta.xml
<CustomField>
    <fullName>Operating_Statement_File__c</fullName>
    <formula>IF(ISBLANK(Operating_Statement_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Operating_Statement_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Statement File</label>
    <type>Text</type>
</CustomField>