force-app/main/default/objects/Property_Extension__c/fields/Operating_Statement_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Operating_Statement_File_Id__c</fullName>
    <label>Operating Statement File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>