force-app/main/default/objects/Property_Extension__c/fields/Original_Asset_Maturity_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Original_Asset_Maturity_Date_Formula__c</fullName>
    <businessOwnerGroup>Asset_Management</businessOwnerGroup>
    <description>This date is populated at the Asset level and signifies the date by which the asset needs to be paid off. This date should never be updated.</description>
    <formula>Property__r.Asset_Maturity_Date__c</formula>
    <inlineHelpText>This date is populated at the Asset level and signifies the date by which the asset needs to be paid off. This date should never be updated.</inlineHelpText>
    <label>Original Asset Maturity Date</label>
    <type>Date</type>
</CustomField>