force-app/main/default/objects/Property_Extension__c/fields/Original_Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Line_Maturity_Date__c</fullName>
    <inlineHelpText>Original Maturity Date on the Loan/Line level</inlineHelpText>
    <label>Original Loan Maturity Date Delete</label>
    <type>Date</type>
</CustomField>