force-app/main/default/objects/Property_Extension__c/fields/Original_Line_Maturity_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Original_Line_Maturity_Date_Formula__c</fullName>
    <formula>Property__r.Deal__r.Original_Line_Maturity_Date__c</formula>
    <inlineHelpText>This date is populated at the Deal level and signifies the expiration of the Line of Credit. This date should never be updated.</inlineHelpText>
    <label>Original Loan Maturity Date</label>
    <type>Date</type>
</CustomField>