force-app/main/default/objects/Property_Extension__c/fields/Other_Condition_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Other_Condition_of_Property__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>