force-app/main/default/objects/Property_Extension__c/fields/Payoff_Issues_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Issues_Resolved__c</fullName>
    <label>Payoff Issues Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>