force-app/main/default/objects/Property_Extension__c/fields/Previous_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Asset_Maturity_Date__c</fullName>
    <description>Current Asset Maturity Date at the time of this Property Extension</description>
    <inlineHelpText>Current Asset Maturity Date at the time of this Property Extension</inlineHelpText>
    <label>Previous Asset Maturity Date</label>
    <type>Date</type>
</CustomField>