force-app/main/default/objects/Property_Extension__c/fields/Property_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Property_Occupied__c</fullName>
    <label>Property Occupied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>