force-app/main/default/objects/Property_Extension__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <formula>TEXT(Property__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Status</label>
    <type>Text</type>
</CustomField>