force-app/main/default/objects/Property_Extension__c/fields/Property_Taxes_Evidence_File__c.field-meta.xml
<CustomField>
    <fullName>Property_Taxes_Evidence_File__c</fullName>
    <formula>IF(ISBLANK(Property_Taxes_Evidence_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Property_Taxes_Evidence_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Taxes Evidence File</label>
    <type>Text</type>
</CustomField>