force-app/main/default/objects/Property_Extension__c/fields/Property_Taxes_Evidence_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Taxes_Evidence_File_Id__c</fullName>
    <label>Property Taxes Evidence File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>