force-app/main/default/objects/Property_Extension__c/fields/Questionnaire_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Received_Date__c</fullName>
    <label>Questionnaire Received Date</label>
    <type>Date</type>
</CustomField>