force-app/main/default/objects/Property_Extension__c/fields/Questionnaire_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Sent_Date__c</fullName>
    <label>Questionnaire Sent Date</label>
    <type>Date</type>
</CustomField>