force-app/main/default/objects/Property_Extension__c/fields/Rent_Role_File__c.field-meta.xml
<CustomField>
    <fullName>Rent_Role_File__c</fullName>
    <formula>IF(ISBLANK(Rent_Roll_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Rent_Roll_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent Role File</label>
    <type>Text</type>
</CustomField>