force-app/main/default/objects/Property_Extension__c/fields/Rent_Roll_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Rent_Roll_File_Id__c</fullName>
    <label>Rent Roll File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>