force-app/main/default/objects/Property_Extension__c/fields/Rental_Agreement_File__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_File__c</fullName>
    <formula>IF(ISBLANK(Rental_Agreement_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Rental_Agreement_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Agreement File</label>
    <type>Text</type>
</CustomField>