force-app/main/default/objects/Property_Extension__c/fields/Rental_Agreement_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_File_Id__c</fullName>
    <label>Rental Agreement File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>