force-app/main/default/objects/Property_Extension__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Date the Property Extension was requested</description>
    <inlineHelpText>Date the Property Extension was requested</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>