force-app/main/default/objects/Property_Extension__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete - Paid</fullName>
            </value>
            <value>
                <fullName>Complete - Bill to Loan</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Bill to Loan</fullName>
                <isActive>false</isActive>
                <label>Bill to Loan</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Paid and Complete</fullName>
                <isActive>false</isActive>
                <label>Paid and Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>