force-app/main/default/objects/Property_Extension__c/fields/Subsequent_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Sales_Price__c</fullName>
    <label>Subsequent Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>