force-app/main/default/objects/Property_Extension__c/fields/What_is_remaining_to_complete__c.field-meta.xml
<CustomField>
    <fullName>What_is_remaining_to_complete__c</fullName>
    <label>What is remaining to complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>