force-app/main/default/objects/Property_Extension__c/listViews/Completed_Extensions.listView-meta.xml
<ListView>
    <fullName>Completed_Extensions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Extension_Date__c</columns>
    <columns>Property__c</columns>
    <columns>Original_Asset_Maturity_Date_Formula__c</columns>
    <columns>New_Asset_Maturity_Date__c</columns>
    <columns>New_Asset_Interest_Rate__c</columns>
    <columns>Status__c</columns>
    <columns>Deal_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete - Paid,Complete - Bill to Loan</value>
    </filters>
    <label>Completed Extensions</label>
</ListView>